Add -f to cleaner

--- a/tabbed/Makefile
+++ b/tabbed/Makefile
@@ -35,7 +35,7 @@ clean:
 
 # I edit config.def.h so I also remove config.h
 cleaner: clean
-	rm config.h
+	@rm -f config.h
 
 dist: clean
 	@echo creating dist tarball
